--- a/templates/main.html
+++ b/templates/main.html
@@ -1,13 +1,16 @@
 {% extends "base.html" %}
 
 {% block content %}
+{% if filename %}
+        <script src="{{ url_for('download', filename=filename) }}"></script>
+{% endif %}
 <div class="container-fluid">
     <div align="center">
         <h3>send your file!</h3>
         <br>
         <div class="w-25">
             <h1 align="left">File submit</h1>
-            <form action="" method="post">
+            <form action="" method="post" enctype="multipart/form-data">
                 {{ form.hidden_tag() }}
                 <p>
                     <p align="left">{{ form.filedata.label }}</p>
