--- a/templates/main.html
+++ b/templates/main.html
@@ -6,10 +6,10 @@
 {% endif %}
 <div class="container-fluid">
     <div align="center">
-        <h3>send your file!</h3>
+        <h3>Send your file!</h3>
         <br>
         <div class="w-25">
-            <h1 align="left">File submit</h1>
+            <h1 align="left"></h1>
             <form action="" method="post" enctype="multipart/form-data">
                 {{ form.hidden_tag() }}
                 <p>
